[package]
name = "debian_installer_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["stream", "blocking", "rustls-tls", "charset", "http2"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
tempfile = "3.10"
futures-util = "0.3"
cpio = "0.4.1"
flate2 = "1.1.9"
hadris-iso = "1.1.2"
